--- a/ts/package.json
+++ b/ts/package.json
@@ -8,7 +8,8 @@
     "typescript": "^4.7.2"
   },
   "scripts": {
-    "exec": "tsc script.ts && node script.js",
-    "del-nm": "tsc delete-node-modules.ts && node delete-node-modules.js" 
+    "exec": "tsc script.ts && node script",
+    "del-nm": "tsc delete-node-modules.ts && node delete-node-modules",
+    "input": "tsc getInput.ts && node getInput"
   }
 }
