--- a/ts/package.json
+++ b/ts/package.json
@@ -8,6 +8,7 @@
     "typescript": "^4.7.2"
   },
   "scripts": {
+    "start": "tsc index.ts && node index",
     "exec": "tsc script.ts && node script",
     "del-nm": "tsc delete-node-modules.ts && node delete-node-modules",
     "input": "tsc getInput.ts && node getInput"
